# novashell

./: .gitignore  .npmrc  BUILD-WINDOWS.md  REQUIREMENTS-DIARY.md  UPDATES.md  next.config.mjs  package.json  pnpm-lock.yaml
.github/workflows/: build-windows.yml
app/: globals.css  layout.tsx  page.tsx
app/api/content/: route.ts
app/api/history/: route.ts
app/api/recommendations/: route.ts
app/api/usage/: route.ts
app/api/youtube/: route.ts
app/api/youtube/channels/: route.ts
components/: cursor-playground.tsx  demo.tsx  spiral-keyboard.tsx
components/shell/: button-hints.tsx  channel-manager.tsx  continue-watching-card.tsx  desktop-mode.tsx  discovery-banner.tsx  gamepad-context.tsx  home-screen.tsx  launch-splash.tsx  library-manager.tsx  quick-settings.tsx  shell.tsx  spiral-keyboard.tsx  tile-icon.tsx  top-bar.tsx  volume-hud.tsx  youtube-tv.tsx
data/: gamepad-ux.db-shm  gamepad-ux.db-wal
hooks/: use-input.ts
lib/: apps-data.ts  client.ts  gamepad.ts  input.ts  native.ts
lib/cdp/: monitor.ts
lib/db/: apps.ts  content.ts  index.ts  recommendations.ts  settings.ts  usage.ts  watch-history.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
