[package]
name = "novashell"
version = "0.1.0"
description = "NovaShell — console-mode shell for Windows"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_UI_Input_XboxController",
] }

[profile.release]
lto = true
opt-level = "s"
