[package]
name = "novashell"
version = "0.1.0"
description = "NovaShell — console-mode shell for Windows"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
# bundled: compiles SQLite in — no system dependency; used to read Brave's History file
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_UI_Input_XboxController",
  "Win32_System_LibraryLoader",
  "Win32_Foundation",
] }

# Build-speed-first release profile: fat LTO added minutes of uncacheable
# link time per CI build to shave ~1MB off a binary that ships inside a
# ~50MB installer — not worth it.
[profile.release]
lto = false
opt-level = 2
